@@ -306,3 +306,5 @@ Version History
     - Fixed the U3 configIO method so Counters are set properly.
     - Fixed the U6 configIO method so EnableUART are set properly.
     - Fixed U3 and U6 WaitShort and WaitLong documentation.
+    - Fixed the U12 aiBurst method so that the returned voltages list is
+      correct.
